# gh-pr-tui-rs

./: .gitignore  .recent-repositories.json  .session.json  ARCHITECTURE.md  ARCHITECTURE_PROPOSAL.md  Cargo.toml  MIGRATION_STATUS.md  README.md  REDUX_VIOLATIONS.md
.github/workflows/: release-binary-assets.yml  release-pr.yml  release.yml
architecture/: ARCHITECTURE_ANALYSIS.md  INDEX_ANALYSIS_README.md  PR_INDEXING_ANALYSIS.md  PR_INDEXING_CODE_WALKTHROUGH.md  PR_INDEXING_PROPOSALS.md  PR_INDEXING_SUMMARY.md  README.md
crates/gh-actions-log-parser/: Cargo.toml
crates/gh-actions-log-parser/src/: ansi.rs  commands.rs  lib.rs  parser.rs  types.rs
crates/gh-client/: Cargo.toml
crates/gh-client/src/: cached_client.rs  client.rs  client_manager.rs  lib.rs  octocrab_client.rs  types.rs
crates/gh-diff-viewer/: Cargo.toml
crates/gh-diff-viewer/src/: action.rs  lib.rs
crates/gh-diff-viewer/src/event/: diff_event.rs  mod.rs
crates/gh-diff-viewer/src/highlight/: highlighter.rs  mod.rs
crates/gh-diff-viewer/src/model/: comment.rs  diff.rs  file_tree.rs  mod.rs
crates/gh-diff-viewer/src/parser/: mod.rs  unified.rs
crates/gh-diff-viewer/src/state/: comment_editor.rs  mod.rs  navigation.rs  viewer_state.rs
crates/gh-diff-viewer/src/traits/: comment_handler.rs  context_provider.rs  mod.rs  theme_provider.rs
crates/gh-diff-viewer/src/widget/: diff_content.rs  diff_viewer.rs  file_tree.rs  mod.rs  review_popup.rs
crates/gh-pr-config/: Cargo.toml
crates/gh-pr-config-migrate/: Cargo.toml
crates/gh-pr-config-migrate/src/: lib.rs
crates/gh-pr-config/src/: app_config.rs  config_file.rs  files.rs  lib.rs  paths.rs  recent_repositories.rs  session.rs
crates/gh-pr-lander/: Cargo.toml  README.md
crates/gh-pr-lander-theme/: Cargo.toml
crates/gh-pr-lander-theme/src/: lib.rs
crates/gh-pr-lander/features/: pr-view-actions.md
crates/gh-pr-lander/src/: actions.rs  background.rs  capabilities.rs  command_id.rs  commands.rs  dispatcher.rs  keybindings.rs  keymap.rs  log_reader.rs  logger.rs  main.rs  reducer.rs  shortcuts.rs  state.rs  store.rs  theme.rs  views.rs
crates/gh-pr-lander/src/actions/: add_repository.rs  available_action.rs  bootstrap.rs  build_log.rs  command_palette.rs  confirmation_popup.rs  context_action.rs  debug_console.rs  diff_viewer.rs  event.rs  global.rs  key_bindings.rs  merge_bot.rs  mod.rs  navigation.rs  pull_request.rs  repository.rs  session.rs  splash.rs  status_bar.rs  text_input.rs
crates/gh-pr-lander/src/domain_models/: auto_merge.rs  mod.rs  operation_monitor.rs  pr_filter.rs  pr_number.rs  pull_request.rs  repository.rs  task_status.rs
crates/gh-pr-lander/src/middleware/: add_repository.rs  app_config_middleware.rs  bootstrap.rs  bootstrap_middleware.rs  command_palette.rs  command_palette_middleware.rs  confirmation_popup_middleware.rs  debug_console_middleware.rs  diff_viewer_middleware.rs  github.rs  github_middleware.rs  keyboard.rs  keyboard_middleware.rs  logging.rs  mod.rs  navigation_middleware.rs  pull_request.rs  pull_request_middleware.rs  repository.rs  repository_middleware.rs  session_middleware.rs  text_input_middleware.rs
crates/gh-pr-lander/src/reducers/: add_repo_reducer.rs  app_reducer.rs  build_log_reducer.rs  command_palette_reducer.rs  confirmation_popup_reducer.rs  debug_console_reducer.rs  diff_viewer_reducer.rs  key_bindings_reducer.rs  mod.rs  pr_reducer.rs  pull_request_reducer.rs  repository_reducer.rs  session_reducer.rs  splash_reducer.rs  status_bar_reducer.rs
crates/gh-pr-lander/src/state/: add_repo.rs  app.rs  build_log.rs  command_palette.rs  confirmation_popup.rs  debug_console.rs  diff_viewer.rs  key_bindings.rs  main_view.rs  merge_bot.rs  mod.rs  splash.rs  status_bar.rs
crates/gh-pr-lander/src/utils/: browser.rs  mod.rs
crates/gh-pr-lander/src/view_models/: build_log_view_model.rs  command_palette.rs  command_palette_view_model.rs  confirmation_popup_view_model.rs  debug_console_view_model.rs  key_bindings_view_model.rs  mod.rs  pr_table.rs  pull_request_view_model.rs  repository_tabs.rs  repository_tabs_view_model.rs  status_bar.rs
crates/gh-pr-lander/src/views/: add_repository_view.rs  build_log_view.rs  command_palette.rs  command_palette_view.rs  confirmation_popup_view.rs  debug_console.rs  debug_console_view.rs  diff_viewer_view.rs  key_bindings_view.rs  main.rs  main_view.rs  mod.rs  pull_request_view.rs  repository_tabs_view.rs  splash.rs  splash_view.rs  status_bar.rs
crates/gh-pr-tui/: Cargo.toml
crates/gh-pr-tui/src/: actions.rs  cache.rs  capabilities.rs  command_palette_integration.rs  config.rs  effect.rs  gh.rs  log.rs  log_capture.rs  main.rs  merge_bot.rs  middleware.rs  panel_capabilities.rs  pr.rs  reducer.rs  state.rs  store.rs  task.rs
crates/gh-pr-tui/src/infra/: config_file.rs  files.rs  mod.rs
crates/gh-pr-tui/src/middleware/: dispatcher.rs  keyboard.rs  logging.rs  merge_bot.rs  mod.rs  shutdown.rs  task.rs  (+1 more)
crates/pr-bulk-review-tui/: Cargo.toml
crates/pr-bulk-review-tui/src/: config.rs  effect.rs  log.rs  main.rs  reducer.rs  shortcuts.rs  state.rs  task.rs  theme.rs
docs/: capability-based-vim-scrolling.md
features/: disk-cache-design.md  rate-limit-reduction-plan.md
src/: config.rs  effect.rs  log.rs  log_capture.rs  main.rs  pr.rs  reducer.rs  shortcuts.rs  state.rs  store.rs  task.rs  theme.rs
(+11 files in other folders)
