[workspace]
members = [
    "crates/gh-actions-log-parser",
    "crates/gh-api-cache",
    "crates/gh-client",
    "crates/gh-diff-viewer",
    "crates/gh-pr-config",
    "crates/gh-pr-config-migrate",
    "crates/gh-pr-lander",
    "crates/gh-pr-lander-theme",
    # "crates/gh-pr-tui",
    "crates/gh-pr-tui-command-palette",
]
resolver = "3"

[workspace.dependencies]
# Internal crates
gh-client = { path = "crates/gh-client" }
gh-diff-viewer = { path = "crates/gh-diff-viewer" }
gh-pr-config = { path = "crates/gh-pr-config" }
gh-pr-config-migrate = { path = "crates/gh-pr-config-migrate" }
gh-pr-lander-theme = { path = "crates/gh-pr-lander-theme" }

# Shared dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
zip = "6.0"
bytes = "1.11"
tokio = { version = "1", features = ["full"] }
log = "0.4"

# ANSI parsing
ansi-parser = "0.9"

# GitHub API
octocrab = "0.48.0"

# TUI
ratatui = "0.29.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.9"
dotenvy = "0.15"

# Logging
env_logger = "0.11"

# Parsing
regex = "1.10"
