[package]
name = "gh-pr-config"
version = "0.1.0"
edition = "2021"
description = "Configuration and file management for gh-pr-tui"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = "6"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
