[package]
name = "gh-pr-lander"
version = "0.1.0"
edition = "2021"

[dependencies]
gh-pr-config = { path = "../gh-pr-config" }
gh-client = { path = "../gh-client" }
ratatui = { version = "0.29", features = ["crossterm"] }
tokio = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
bitflags = "2.6"
chrono = "0.4"
figlet-rs = "0.1"
serde = { version = "1.0", features = ["derive"] }
