[package]
name = "gh-pr-lander"
version = "0.1.0"
edition = "2021"

[dependencies]
gh-actions-log-parser = { path = "../gh-actions-log-parser" }
gh-diff-viewer = { path = "../gh-diff-viewer" }
gh-client.workspace = true
gh-pr-config.workspace = true
gh-pr-config-migrate.workspace = true
gh-pr-lander-theme.workspace = true
ratatui = { version = "0.29", features = ["crossterm"] }
tokio = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
simplelog = "0.12"
bitflags = "2.6"
chrono = "0.4"
figlet-rs = "0.1"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
regex = "1"
